Bug 879435 - Hide Chat nick fields and properly decode 'Prefers HTML mail' flag in own vCard dialog . r=Standard8